--- a/src/components/search/Search.scss
+++ b/src/components/search/Search.scss
@@ -79,3 +79,19 @@
     background-color: #dfd9fc;
   }
 }
+
+.width-unset {
+  width: unset;
+}
+
+.slider-width {
+  width: 200px
+}
+
+.slider-input-width {
+  width: 54px
+}
+
+.inline-block {
+  display: inline-block;
+}
